fix: add a wrapper to avoid content stretching

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -3,12 +3,6 @@
 /* Variable Setup
 */
 :root {
-    line-height: 1.5;
-    font-weight: 400;
-    color-scheme: light;
-    color: #1a1a1a;
-    background-color: #fff;
-
     --font-header: "Cormorant Garamond", serif;
     --font-body: "Open Sans", system-ui, sans-serif;
     --font-mono: "JetBrains Mono", monospace;
@@ -46,7 +40,10 @@ body {
     min-height: 100vh;
 }
 
-main {
+.wrapper {
+    max-width: 1500px;
+    width: 100%;
+    margin: 0 auto;
     flex: 1;
 }
 
@@ -175,7 +172,7 @@ h6 {
         border-radius: var(--border-radius);
         position: relative;
         width: 100%;
-        max-width: 50vw;
+        max-width: 80%;
         height: 55vh;
         overflow: hidden;
     }
